Remove old routes, adding in new add url route

--- a/templates/layout/default.phtml
+++ b/templates/layout/default.phtml
@@ -41,19 +41,7 @@ $this->inlineScript()
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="https://zendframework.github.io/zend-expressive/" target="_blank">
-                                <i class="fa fa-book"></i> Docs
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/zendframework/zend-expressive" target="_blank">
-                                <i class="fa fa-wrench"></i> Contribute
-                            </a>
-                        </li>
-                        <li>
-                            <a href="<?php echo $this->url('api.ping') ?>">
-                                Ping Test
-                            </a>
+                            <a href="<?php echo $this->url('url.add') ?>">Add Url</a>
                         </li>
                     </ul>
                 </div>
